# MiMinions

./: .gitignore  AGENT_MODULE.md  BRANCH_COMPARISON_ANALYSIS.md  BRANCH_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PROPOSAL-SLIM-DOWN.md  README.md  REFACTORING_SUMMARY.md  STRUCTURE.md  app.py  chat_test.py  chatbot.py  main.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  supplier.py  work_bench.ipynb
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: python-app.yml  python-publish.yml
deploy/: build_cli.sh  to_pypi_test.sh
docs/: plan.txt
examples/: README.md  agent_memory_example.py  base_agent_example.py  cheesy_way.py  custom_tools_example.py  database_integration_example.py  demo.py  document_ingestion_example.py  document_server_example.py  faiss_memory_example.py  memory_management_example.py  minion_agent_example.py  pydantic_agent_example.py  pydantic_memory_example.py  simple_agent_example.py  sqlite_memory_example.py  sqlite_memory_search_example.py  tasks_example.py
examples/.data/: custom_memory.db
examples/data_management/: basic_usage.py
examples/example_chat/: README.md  chat_example.py
examples/example_files/: sample.txt
examples/legacy/: README.md  cli_demo.py  custom_tools_example.py  database_integration_example.py  demo.py  memory_management_example.py
examples/pydantic_agent/: __init__.py  document_ingestion_example.py  pydantic_agent_example.py  pydantic_memory_example.py  sqlite_memory_example.py  sqlite_memory_search_example.py
examples/servers/: document_server.py  math_server.py
examples/simple_agent/: __init__.py  agent_memory_example.py  document_ingestion_example.py  document_server_example.py  simple_agent_example.py  sqlite_memory_example.py  sqlite_memory_search_example.py
mock/: llm_implementation_plan.md  llm_issue.txt
specs/003-uv-package-manager/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.py  supplier.py  utils.py
tests/: README.md  conftest.py  document_test.py  run_all.sh  test_agent.py  test_base_agent.py  test_context_builder.py  test_data_management.py  test_data_management_e2e.py  test_distiller.py  test_document_ingestion.py  test_execution.py  test_faiss_memory.py  test_mcp_adapter.py  test_md_store.py  test_memory.py  test_pydantic_agent.py  test_pydantic_memory.py  test_session_store.py  test_simple_agent  test_simple_agent.py  test_sqlite_memory.py  test_sqlite_memory_search.py
(+201 files in other folders)
