[project]
name = "miminions"
version = "0.1.0"
description = "A simple agent framework with MCP server support and vector memory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.4", 
    "openai-agents>=0.3.3",
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "pdfplumber>=0.9.0",
]

[project.optional-dependencies]
sqlite = [
    "sqlite-vec>=0.1.0",
]
faiss = [
    "faiss-cpu>=1.7.0",
]
all = [
    "sqlite-vec>=0.1.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
