[project]
name = "miminions"
version = "0.1.0"
description = "An agentic framework with pydantic_ai, MCP server support and vector memory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=0.1.0",
    "fastmcp>=2.13.0", 
    "openai-agents>=0.3.3",
    "mcp>=1.23.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "pdfplumber>=0.9.0",
    "urllib3>=2.6.3",
    "python-multipart>=0.0.22",
    "starlette>=0.49.1",
    "filelock>=3.20.3",
    "authlib>=1.6.6",
    "werkzeug>=3.1.4"
]

[project.optional-dependencies]
sqlite = [
    "sqlite-vec>=0.1.0",
    "pysqlite3>=0.5.0",
]
faiss = [
    "faiss-cpu>=1.7.0",
]
all = [
    "sqlite-vec>=0.1.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
