[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miminions"
version = "0.2.2"
description = "An agentic framework with pydantic_ai, MCP server support and vector memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.1.0",
    "mcp>=1.23.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "pdfplumber>=0.9.0",
    "Faker>=40.0.0"
]

[project.scripts]
miminions = "miminions.cli:main"

[project.optional-dependencies]
sqlite = [
    "sqlite-vec>=0.1.0",
    "pysqlite3>=0.5.0",
]
all = [
    "sqlite-vec>=0.1.0",
    "pysqlite3>=0.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "flake8>=7.0.0"
]
cli-build = [
    "pyinstaller>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

